--- a/style/main.less
+++ b/style/main.less
@@ -1,5 +1,5 @@
 @font-stack: Verdana, Geneva, Tahoma, sans-serif;
-@nav-background: gold;
+@nav-background: rgb(183, 166, 69);
 @nav-width: 30%;
 @nav-height: 100vh;
 @nav-transition: transform 0.1s ease;
@@ -8,13 +8,25 @@
 
 * {
   font-family: @font-stack;
+  margin: 0px;
 }
 
+
 .wrapper {
-  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
   min-height: 500px;
+  justify-content: space-around;
+  align-items: center;
   text-align: center;
+  margin-top: 30px;
 }
+
+.flex-item{
+  margin: 10px;
+}
+
 img {
     height: 200px;
     width: 200px;
@@ -27,12 +39,11 @@ nav {
   left: 0;
   width: @nav-width;
   height: @nav-height;
-  border: 1px;
-  padding: 1px;
   background-color: @nav-background;
   text-align: center;
   transform: @nav-initial-translate;
   transition: @nav-transition;
+
 
   &.twitter {
     float: left;
@@ -76,37 +87,28 @@ nav {
     margin: 3px;
   }
 
-  @media screen and (min-width: 700px) {
-    position: static;
-    height: auto;
-    transform: @nav-target-translate;
-    width: 100%;
-
-    .hamburger, .close {
-      display: none;
-    }
-
-    li {
-      display: inline-block;
-    }
-  }
 }
 
 /* Footer styling */
 footer {
-  background-color: #f8f8f8;
+  position: relative;
+  background-color: #c3c3c3;
   color: #555;
   font-size: 14px;
-  padding: 30px;
+  min-height: 200px;
+  margin-top: 20px;
+  width: 100%;
+  bottom: 0;
 
   .footer-container {
     display: flex;
-    justify-content: space-between;
-    max-width: 1000px;
-    margin: 0 auto;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
 
     .teacher-info, .school-info {
       width: 45%;
+      margin-top: 50px;
 
       h4 {
         margin-bottom: 10px;
@@ -132,11 +134,11 @@ footer {
 /* Poems and videos */
 .poem {
   font-size: 21px;
-  border: 3px solid @nav-background;
+  border: 5px solid @nav-background;
   border-radius: 15px;
   margin-left: 40%;
   margin-right: 40%;
-  width: auto;
+  width: 500px;
   height: auto;
   text-align: center;
   font-family: 'Mystery Quest', cursive;
@@ -151,16 +153,17 @@ iframe {
   position: relative;
   overflow: hidden;
   width: 200px;
-  font-size: 20px;
+  font-size: 15px;
   letter-spacing: 1px;
   background-color: @nav-background;
   color: #0c0c0c;
   font-family: 'Mystery Quest', cursive;
-
   text-shadow: 0 1px 0 rgba(0,0,0,0.7);
+  border-radius: 10px;
 }
 .button:hover {
   background-color: #31251e;
+  box-shadow: 1px 5px 15px 1px rgba(0,0,0,0.31);
   color: #fff;
 }
 .button:active { 
@@ -170,4 +173,23 @@ iframe {
   -moz-transition: none;
   -webkit-transition: none;
   transition: none;
+}
+
+/* Media Queries */
+
+@media screen and (min-width: 700px) {
+  nav{
+    height: auto;
+    transform: @nav-target-translate;
+    width: 100%;
+  }
+
+  .hamburger, .close {
+    display: none;
+  }
+
+  li {
+    display: inline-block;
+  }
+
 }
